@@ -1,4 +1,4 @@
-rev 12-Oct_09-10_24
+rev 12-Nov_20-18_21
 
 6 June
 Upgraded from FCKeditor 2.4.1 to 2.6.6.  2.6.6 includes the scayt spellchecker, which is an in-editor spellchecker.
@@ -51,8 +51,16 @@ Implemented option to rewrite FCKeditor smiley URLs when pages are moved to new 
 edit.php:_preprocess.  The URLs are reset on a page by page basis when loaded and saved.  The option
 should be turned off except when needed.
 
-20 August
+20 September
 Minor edit (removed stray quotation mark attached attribute name in edit.php form tag)
 
 9 October 2012
 Fixed bug where table markup inside code blocks dropped empty cells (edit.php::_preprocess)
+
+20 Nov
+Added session_id check to config.php:  in some system setting session which has already been set throws
+an error.
+
+Added $mssg="" to FileUpload() in commands.php for SendUploadResults(), without which some systems freeze.
+
+Both of the above occurred on Windows with PHP 5.3
